// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DataSourceList Empty 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-iQNlJl jxLqkS"
  >
    <div
      className="sc-eqIVtm jYTlNG"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-fAjcbJ byigni"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-caSCKo jjNSwx"
        >
          <div
            className="sc-fAjcbJ byigni"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gisBJw eCZBLA"
        >
          <ul
            className="sc-kjoXOD sc-cHGsZl cULqXW"
          />
          <ul
            className="sc-kjoXOD sc-TOsTZ eELfaW"
          >
            <li
              className="sc-kgAjT sc-ksYbfQ gQWegr"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-bwCtUz kLbHbK"
    >
      <div
        className="sc-RefOD fxQHUp"
      >
        <a
          active={false}
          className="sc-iQKALj jbBehI"
          href="/project/1"
          onClick={[Function]}
        >
          <span>
            Settings
          </span>
        </a>
        <a
          active={true}
          className="sc-iQKALj ecVPtc"
          href="/project/1/datasource"
          onClick={[Function]}
        >
          <span>
            Sources
          </span>
        </a>
        <a
          active={false}
          className="sc-iQKALj jbBehI"
          href="/project/1/user"
          onClick={[Function]}
        >
          <span>
            Users
          </span>
        </a>
      </div>
    </div>
    <div
      className="sc-hrWEMg gxndlb"
    >
      <div
        className="sc-eTuwsz fCuGaP"
      >
        <h1
          className="sc-gwVKww htJtAT"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Data Sources
        </h1>
        <h2
          className="sc-hXRMBi eCsLvF"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Overview
        </h2>
      </div>
      <div
        className="sc-epnACN hsXqzQ"
      >
        <button
          disabled={false}
          id="createDataSourceDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      className="sc-cMhqgX krvbfH"
    />
    <div
      className="sc-iwsKbI eQdjUy"
    >
      <div
        className="sc-gqjmRU fIKSOC"
      >
        <div
          className="sc-gZMcBi jZympT"
        >
          <button
            disabled={false}
            id="backBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
          <button
            disabled={false}
            id="createDataSourceBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With data source 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-iQNlJl jxLqkS"
  >
    <div
      className="sc-eqIVtm jYTlNG"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-fAjcbJ byigni"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-caSCKo jjNSwx"
        >
          <div
            className="sc-fAjcbJ byigni"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gisBJw eCZBLA"
        >
          <ul
            className="sc-kjoXOD sc-cHGsZl cULqXW"
          />
          <ul
            className="sc-kjoXOD sc-TOsTZ eELfaW"
          >
            <li
              className="sc-kgAjT sc-ksYbfQ gQWegr"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-bwCtUz kLbHbK"
    >
      <div
        className="sc-RefOD fxQHUp"
      >
        <a
          active={false}
          className="sc-iQKALj jbBehI"
          href="/project/1"
          onClick={[Function]}
        >
          <span>
            Settings
          </span>
        </a>
        <a
          active={true}
          className="sc-iQKALj ecVPtc"
          href="/project/1/datasource"
          onClick={[Function]}
        >
          <span>
            Sources
          </span>
        </a>
        <a
          active={false}
          className="sc-iQKALj jbBehI"
          href="/project/1/user"
          onClick={[Function]}
        >
          <span>
            Users
          </span>
        </a>
      </div>
    </div>
    <div
      className="sc-hrWEMg gxndlb"
    >
      <div
        className="sc-eTuwsz fCuGaP"
      >
        <h1
          className="sc-gwVKww htJtAT"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Data Sources
        </h1>
        <h2
          className="sc-hXRMBi eCsLvF"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Overview
        </h2>
      </div>
      <div
        className="sc-epnACN hsXqzQ"
      >
        <button
          disabled={false}
          id="createDataSourceDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      className="sc-cMhqgX krvbfH"
    >
      <li
        className="sc-bsbRJL gqxskW"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <div
              className="sc-gqPbQI debtuc"
            >
              <ul
                className="sc-cQFLBn hgIqNT"
              >
                <li
                  className="sc-gojNiO jYgoHp"
                  id="headerItem-0"
                >
                  3 months ago
                </li>
                <li
                  className="sc-gojNiO jYgoHp"
                  id="headerItem-1"
                >
                  firstName lastName
                </li>
              </ul>
              <div
                className="sc-hORach bYdQpn"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M11 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                  <path
                    d="M19 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <h1
            className="sc-iuJeZd gDhnDJ"
            id="dataSourceTitle"
            onClick={[Function]}
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            name
          </h1>
          <div
            className="sc-esOvli RbImR"
          >
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-0"
              >
                Source
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-0"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-1"
              >
                Items
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-1"
              >
                —
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-2"
              >
                Fields
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-2"
              >
                —
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-3"
              >
                Filters
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-3"
              >
                —
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-4"
              >
                Views
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-4"
              >
                —
              </span>
            </div>
          </div>
        </div>
      </li>
      <li
        className="sc-bsbRJL gqxskW"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <div
              className="sc-gqPbQI debtuc"
            >
              <ul
                className="sc-cQFLBn hgIqNT"
              >
                <li
                  className="sc-gojNiO jYgoHp"
                  id="headerItem-0"
                >
                  3 months ago
                </li>
                <li
                  className="sc-gojNiO jYgoHp"
                  id="headerItem-1"
                >
                  firstName lastName
                </li>
              </ul>
              <div
                className="sc-hORach bYdQpn"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M11 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                  <path
                    d="M19 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <h1
            className="sc-iuJeZd gDhnDJ"
            id="dataSourceTitle"
            onClick={[Function]}
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            name
          </h1>
          <div
            className="sc-esOvli RbImR"
          >
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-0"
              >
                Source
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-0"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-1"
              >
                Items
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-1"
              >
                246
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-2"
              >
                Fields
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-2"
              >
                11
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-3"
              >
                Filters
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-3"
              >
                —
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-4"
              >
                Views
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-4"
              >
                —
              </span>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div
      className="sc-iwsKbI eQdjUy"
    >
      <div
        className="sc-gqjmRU fIKSOC"
      >
        <div
          className="sc-gZMcBi jZympT"
        >
          <button
            disabled={false}
            id="backBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
          <button
            disabled={false}
            id="createDataSourceBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DataSourceList With jobs 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-iQNlJl jxLqkS"
  >
    <div
      className="sc-eqIVtm jYTlNG"
    >
      <div
        style={
          Object {
            "alignItems": "flex-start",
            "color": "#FFF",
            "display": "flex",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingBottom": "18px",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            className="sc-fAjcbJ byigni"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <button
          disabled={false}
          id="topHeaderOpenMenuBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": 6,
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M30 37a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6zm0-10a3 3 0 110 6 3 3 0 010-6z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
      <div
        style={
          Object {
            "backgroundColor": "#000",
            "color": "#FFF",
            "maxWidth": null,
            "minHeight": "100vh",
            "padding": "18px 20px 27px",
            "position": "fixed",
            "right": 0,
            "textAlign": "left",
            "top": 0,
            "transform": "translateX(100%)",
            "transition": "transform 400ms cubic-bezier(0.86, 0, 0.07, 1), visibility 0s linear 400ms",
            "visibility": 0,
            "width": "100%",
            "zIndex": 9999,
          }
        }
      >
        <div
          className="sc-caSCKo jjNSwx"
        >
          <div
            className="sc-fAjcbJ byigni"
          >
            <h2
              id="headerTitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 100,
                  "margin": 0,
                }
              }
            >
              Data Sources
            </h2>
            <h1
              id="headerSubtitle"
              style={
                Object {
                  "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                  "fontSize": "24px",
                  "fontWeight": 600,
                  "letterSpacing": "-0.12px",
                  "lineHight": 1.25,
                  "margin": 0,
                }
              }
            >
              Overview
            </h1>
          </div>
        </div>
        <div
          className="sc-gisBJw eCZBLA"
        >
          <ul
            className="sc-kjoXOD sc-cHGsZl cULqXW"
          />
          <ul
            className="sc-kjoXOD sc-TOsTZ eELfaW"
          >
            <li
              className="sc-kgAjT sc-ksYbfQ gQWegr"
            >
              <a
                href="/project/1"
                id={null}
                onClick={[Function]}
              >
                Project details
              </a>
            </li>
          </ul>
        </div>
        <button
          disabled={false}
          id="topHeaderCloseMenuButton"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "border": "none",
              "borderRadius": "48px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "position": "absolute",
              "right": 0,
              "top": "6px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#FFF",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M39.192 17.98l2.829 2.828L32.828 30l9.193 9.192-2.829 2.829L30 32.828l-9.192 9.193-2.829-2.829L27.172 30l-9.193-9.192 2.829-2.829L30 27.172l9.192-9.193z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="sc-bwCtUz kLbHbK"
    >
      <div
        className="sc-RefOD fxQHUp"
      >
        <a
          active={false}
          className="sc-iQKALj jbBehI"
          href="/project/1"
          onClick={[Function]}
        >
          <span>
            Settings
          </span>
        </a>
        <a
          active={true}
          className="sc-iQKALj ecVPtc"
          href="/project/1/datasource"
          onClick={[Function]}
        >
          <span>
            Sources
          </span>
        </a>
        <a
          active={false}
          className="sc-iQKALj jbBehI"
          href="/project/1/user"
          onClick={[Function]}
        >
          <span>
            Users
          </span>
        </a>
      </div>
    </div>
    <div
      className="sc-hrWEMg gxndlb"
    >
      <div
        className="sc-eTuwsz fCuGaP"
      >
        <h1
          className="sc-gwVKww htJtAT"
          id="desktopHeaderTitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 600,
              "letterSpacing": "-0.12px",
              "lineHight": 1.25,
              "margin": 0,
            }
          }
        >
          Data Sources
        </h1>
        <h2
          className="sc-hXRMBi eCsLvF"
          id="desktopHeaderSubtitle"
          style={
            Object {
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "fontSize": "24px",
              "fontWeight": 100,
              "margin": 0,
            }
          }
        >
          Overview
        </h2>
      </div>
      <div
        className="sc-epnACN hsXqzQ"
      >
        <button
          disabled={false}
          id="createDataSourceDesktopBtn"
          onClick={[Function]}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
    <ul
      className="sc-cMhqgX krvbfH"
    >
      <li
        className="sc-bsbRJL gqxskW"
      >
        <div
          style={
            Object {
              "backgroundColor": "#1d1d20",
              "borderTop": "2px solid #FFF",
              "color": "#FFF",
              "display": "flex",
              "flexDirection": "column",
              "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
              "padding": "12px 14px 14px",
            }
          }
        >
          <div
            style={
              Object {
                "color": undefined,
                "fontSize": "12px",
                "marginBottom": "14px",
              }
            }
          >
            <div
              className="sc-gqPbQI debtuc"
            >
              <ul
                className="sc-cQFLBn hgIqNT"
              >
                <li
                  className="sc-gojNiO jYgoHp"
                  id="headerItem-0"
                >
                  3 months ago
                </li>
                <li
                  className="sc-gojNiO jYgoHp"
                  id="headerItem-1"
                >
                  firstName lastName
                </li>
              </ul>
              <div
                className="sc-hORach bYdQpn"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": "30px",
                      "width": "30px",
                    }
                  }
                  viewBox="0 0 30 30"
                >
                  <path
                    d="M11 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                  <path
                    d="M19 23a8 8 0 100-16 8 8 0 000 16zm0-1a7 7 0 110-14 7 7 0 010 14z"
                  />
                </svg>
              </div>
            </div>
          </div>
          <h1
            className="sc-iuJeZd gDhnDJ"
            id="dataSourceTitle"
            onClick={[Function]}
            style={
              Object {
                "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
                "fontSize": "24px",
                "fontWeight": 600,
                "letterSpacing": "-0.12px",
                "lineHight": 1.25,
                "margin": 0,
              }
            }
          >
            name
          </h1>
          <div
            className="sc-esOvli RbImR"
          >
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-0"
              >
                Source
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-0"
              >
                <svg
                  style={
                    Object {
                      "fill": "#FFF",
                      "height": 40,
                      "width": 40,
                    }
                  }
                  viewBox="0 0 60 60"
                >
                  <path
                    d="M33 8v9.332l.005.195A3.67 3.67 0 0036.668 21H46v27.902A3.106 3.106 0 0142.887 52H17.113A3.106 3.106 0 0114 48.902V10.48A2.484 2.484 0 0116.492 8H33zm7 20H20v17h20V28zM29 40v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm-9-5v3h-7v-3h7zm9 0v3h-7v-3h7zm7.5-11h-8.832l-.144-.006A1.67 1.67 0 0135 17.332V8.5L45.5 19z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-1"
              >
                Items
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-1"
              >
                —
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-2"
              >
                Fields
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-2"
              >
                —
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-3"
              >
                Filters
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-3"
              >
                —
              </span>
            </div>
            <div
              className="sc-cmthru jcfLxV"
            >
              <span
                className="sc-hMFtBS fdUToG"
                id="metaItem-4"
              >
                Views
              </span>
              <span
                className="sc-cLQEGU ibrRCj"
                id="metaItemValue-4"
              >
                —
              </span>
            </div>
          </div>
        </div>
      </li>
    </ul>
    <div
      className="sc-iwsKbI eQdjUy"
    >
      <div
        className="sc-gqjmRU fIKSOC"
      >
        <div
          className="sc-gZMcBi jZympT"
        >
          <button
            disabled={false}
            id="backBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M25.857 17L28 19.083 18.828 28H45v3H18.828L28 39.917 25.857 42 13 29.5 25.857 17z"
              />
            </svg>
          </button>
          <button
            disabled={false}
            id="createDataSourceBtn"
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "48px",
                "color": "#000",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": "18px",
                "height": "60px",
                "margin": "0",
                "minHeight": "48px",
                "outline": "none",
                "padding": "0",
                "width": "60px",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v12.999L45 28v4H32v13h-4V32H15v-4h13V15h4z"
                fillRule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
